[gd_scene load_steps=6 format=3 uid="uid://bg0ts60edlrdg"]

[ext_resource type="Script" uid="uid://bxtath71m7kcc" path="res://UserInterface/DialogueUI.gd" id="1_671f4"]
[ext_resource type="Texture2D" uid="uid://ci73tn36kaj6k" path="res://Assets/stand-in-image.jpg" id="2_kdinw"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_kdinw"]
blend_mode = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8notk"]
bg_color = Color(0.60038817, 0.60038817, 0.60038817, 0.18200001)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mb6th"]
font_size = 24
font_color = Color(0.8284942, 0.64528364, 0.831592, 1)

[node name="DialogueUI" type="Control"]
process_mode = 4
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_671f4")

[node name="DialoguePanel" type="Panel" parent="."]
material = SubResource("CanvasItemMaterial_kdinw")
custom_minimum_size = Vector2(900, 300)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_8notk")

[node name="ColorRect" type="ColorRect" parent="DialoguePanel"]
z_index = -5
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
color = Color(0.27752772, 0.27752772, 0.27752772, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="DialoguePanel"]
z_index = 1
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -272.0
grow_horizontal = 2
grow_vertical = 0

[node name="Portrait" type="TextureRect" parent="DialoguePanel/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("2_kdinw")
expand_mode = 3
stretch_mode = 5

[node name="DialogueContent" type="VBoxContainer" parent="DialoguePanel/HBoxContainer"]
z_index = 1
layout_mode = 2

[node name="NPCName" type="Label" parent="DialoguePanel/HBoxContainer/DialogueContent"]
layout_mode = 2
text = "Test"
label_settings = SubResource("LabelSettings_mb6th")

[node name="DialogueText" type="RichTextLabel" parent="DialoguePanel/HBoxContainer/DialogueContent"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
bbcode_enabled = true
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean faucibus lobortis suscipit. Suspendisse mauris diam, condimentum eu mauris ut, vulputate molestie lorem. Quisque vulputate tincidunt varius. Morbi sem arcu, dignissim non nibh in, vulputate blandit augue. Quisque rutrum id magna sed finibus. Quisque lorem neque, egestas sit amet ornare euismod, pellentesque et purus. Sed lorem justo, vehicula ac lectus sit amet, mollis cursus urna."
fit_content = true

[node name="ResponsesContainer" type="VBoxContainer" parent="DialoguePanel/HBoxContainer/DialogueContent"]
layout_mode = 2
theme_override_constants/separation = 10
